Fix scrollbars on chrome

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -13,6 +13,7 @@
 }
 body {
     background: rgb(35, 36, 42);
+    overflow-y: overlay;
 }
 
 .navbar-input {
